// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Custom atom labels should be supported in molfiles 1`] = `
"
Actelion Java MolfileCreator 2.0

  0  0  0  0  0  0              0 V3000
M  V30 BEGIN CTAB
M  V30 COUNTS 6 5 0 0 0
M  V30 BEGIN ATOM
M  V30 1 C 4.3301 0 0 0
M  V30 2 O 3.4641 -0.5 0 0
M  V30 3 C 2.598 0 0 0
M  V30 4 C 1.732 -0.5 0 0
M  V30 5 O 0.866 0 0 0
M  V30 6 N 0 -0.5 0 0
M  V30 END ATOM
M  V30 BEGIN BOND
M  V30 1 1 1 2
M  V30 2 1 2 3
M  V30 3 1 3 4
M  V30 4 1 4 5
M  V30 5 1 5 6
M  V30 END BOND
M  V30 BEGIN SGROUP
M  V30 1 DAT 1 ATOMS=(1 1) FIELDNAME="NOSEARCH_OCL_CUSTOM_LABEL" -
M  V30 FIELDDISP="    4.3301    0.0000    DA    ALL  1       5" FIELDDATA="R3"
M  V30 2 DAT 2 ATOMS=(1 2) FIELDNAME="NOSEARCH_OCL_CUSTOM_LABEL" -
M  V30 FIELDDISP="    3.4641    0.5000    DA    ALL  1       5" FIELDDATA="]1'"
M  V30 END SGROUP
M  V30 END CTAB
M  END
"
`;

exports[`Custom atom labels should not break molfile syntax 1`] = `
"
Actelion Java MolfileCreator 1.0

  1  0  0  0  0  0  0  0  0  0999 V2000
    0.0000    0.0000    0.0000 C   0  0  0  0  0  0  0  0  0  0  0  0
M  STY  1   1 DAT
M  SLB  1   1   1
M  SAL   1  1   1
M  SDT   1 NOSEARCH_OCL_CUSTOM_LABEL
M  SDD   1     0.0000    0.0000    DA    ALL  1       5
M  SED   1 special: "'-_/chars
M  END
"
`;

exports[`Custom atom labels should not break molfile syntax 2`] = `
"
Actelion Java MolfileCreator 2.0

  0  0  0  0  0  0              0 V3000
M  V30 BEGIN CTAB
M  V30 COUNTS 1 0 0 0 0
M  V30 BEGIN ATOM
M  V30 1 C 0 0 0 0
M  V30 END ATOM
M  V30 BEGIN BOND
M  V30 END BOND
M  V30 BEGIN SGROUP
M  V30 1 DAT 1 ATOMS=(1 1) FIELDNAME="NOSEARCH_OCL_CUSTOM_LABEL" -
M  V30 FIELDDISP="    0.0000    0.0000    DA    ALL  1       5" FIELDDATA="special: "'-_/chars"
M  V30 END SGROUP
M  V30 END CTAB
M  END
"
`;

exports[`Custom atom labels should support unicode 1`] = `
"
Actelion Java MolfileCreator 2.0

  0  0  0  0  0  0              0 V3000
M  V30 BEGIN CTAB
M  V30 COUNTS 3 2 0 0 0
M  V30 BEGIN ATOM
M  V30 1 O 1.732 -0.5 0 0
M  V30 2 C 0.866 0 0 0
M  V30 3 N 0 -0.5 0 0
M  V30 END ATOM
M  V30 BEGIN BOND
M  V30 1 1 1 2
M  V30 2 1 2 3
M  V30 END BOND
M  V30 BEGIN SGROUP
M  V30 1 DAT 1 ATOMS=(1 1) FIELDNAME="NOSEARCH_OCL_CUSTOM_LABEL" -
M  V30 FIELDDISP="    1.7321    0.5000    DA    ALL  1       5" FIELDDATA="α"
M  V30 2 DAT 2 ATOMS=(1 2) FIELDNAME="NOSEARCH_OCL_CUSTOM_LABEL" -
M  V30 FIELDDISP="    0.8660    0.0000    DA    ALL  1       5" FIELDDATA="裞"
M  V30 3 DAT 3 ATOMS=(1 3) FIELDNAME="NOSEARCH_OCL_CUSTOM_LABEL" -
M  V30 FIELDDISP="    0.0000    0.5000    DA    ALL  1       5" FIELDDATA="🪿🥰🦹🏽"
M  V30 END SGROUP
M  V30 END CTAB
M  END
"
`;
